Systre 1.1.8:

2013-03-26: Removed the zeolite archive; only the RCSR archive is built in now
2013-03-05: Archive files under ~/.systre are read at startup
2013-03-05: Systre can save its current configuration as a startup default
2013-03-05: TD10 value is rounded to the nearest integer.
2013-02-26: RCSR archive is current as of today.
2012-09-11: The Wells point symbols for vertices are displayed on request.
2012-09-06: Added some support for 1d structures.
2012-09-05: Warnings on unit cell parameters that don't fit the space group.
2012-09-03: Warnings for unknown keywords and missing space group information.
2012-08-31: Added option to embed based on vertex positions from input.
2012-08-20: The order of input vertices is now normally preserved.
2012-05-27: Reverted generated class files to version 49.0 (Java 1.5).

Systre 1.1.7:

2011-09-05: Fixed a bug in the embedder that made JVM 1.6 crash on OSX.

Systre 1.1.6:

  Bug fixes:
    - Archive output was empty with embedding disabled.

- Structure names for RCSR and the zeolite database are reported separately.
- The .tgs extension (from 2dtiler) is now supported for D-symbol files.
- RCSR archive is current as of 2009-10-21.

Systre 1.1.5:

  Bug fixes:
    - The smallest non-bonded distance reported was occasionally incorrect.
    - The test for degenerate unit cells could miss certain degeneracies.
    - The format of an output file is now determined by the file filter chosen.
    - The file extension for an output file is now determined by the format.

- Improved the layout for the option dialog.
- Output can be saved to file after 'Cancel' even when the computation freezes.
- Translational freedom, if any, is used to improve the output node positions.
- The embedding step can now be skipped altogether.
- A connectivity value of 0 for an atom is now read as 'undetermined'.
- The GUI version now has an option to process whole files without stopping.