@@ -1,5 +1,6 @@
 Systre 1.1.8:
 
+2013-03-27: Systre can read .cgd file entries of type TILING (i.e. face lists)
 2013-03-26: Removed the zeolite archive; only the RCSR archive is built in now
 2013-03-05: Archive files under ~/.systre are read at startup
 2013-03-05: Systre can save its current configuration as a startup default
